--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,5 @@
 {% include head.html %}
+<img src="{{page.image}}" alt="">
 <h1>Blog post: {{page.title}}</h1>
 {{ content }}
 {% include footer.html %}
