--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -1,6 +1,11 @@
 {% include head.html %}
 {% include header.html %}
 
+<div class="main-content">
+<div class="container">
 {{ content }}
+</div>
+</div>
+
 
 {% include footer.htm %}
