--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,11 @@
+
+
+<footer class="site-footer">
+	<div class="container">
+		<p>{{ site.title }} &copy; {{ site.time }}</p>
+		<p>{{ site.email }}</p>
+	</div>
+</footer>
+  
   </body>
 </html>
