--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 				
 				{% for nav in site.pages %}
 					{% if nav.title %}
-				    	<a class="nav-link {% if nav.title == page.title %} active{% endif %}" href="{{ nav.url }}">{{ nav.title }}</a>
+				    	<li><a class="nav-link {% if nav.title == page.title %} active{% endif %}" href="{{ nav.url }}">{{ nav.title }}</a></li>
 				  	{% endif %}
 				{% endfor %}
 
