--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header cf">
 	<div class="container">
-		<a href="#" class="site-title">{{ site.title }}</a>
+		<a href="{{site.url}}" class="site-title">{{ site.title }}</a>
 		<nav class="navbar">
 			<ul class="header-nav">
 				
